{Bug - Ui} /Fixed {menu > z-index}

--- a/src/common/components/footer/Footer.scss
+++ b/src/common/components/footer/Footer.scss
@@ -19,6 +19,7 @@ $height-icon-center: 60px;
     }
 
     .icon-center {
+        z-index: 1;
         margin-top: calc(-1 * #{$height-icon-center} / 2);
     }
 }
